--- a/style.css
+++ b/style.css
@@ -1,125 +1,102 @@
     
     
 /* declines all defaulted padding, and margins needs an override though*/ 
-    * {
-        margin: 0;
-        padding: 0; 
-        text-decoration: none;
-        list-style: none;
-        box-sizing: border-box;
-    }
+* {
+  margin: 0;
+  padding: 0; 
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+}
 
+nav{
+  font-family:arial;
+  background-color: rgb(39, 38, 38) ;
+  height: 80px;
+}
 
-  .vaporwave-button{
-    padding: 20px 30px 20px 30px ;
-    margin-left: 150px;
-    font-size:18;
-    vertical-align: top;
-    font-family:Arial, Helvetica, sans-serif;
-    color:rgb(228, 91, 255);
-    background-color: rgb(39, 38, 38);
-    cursor: pointer;
-    border-width: 1px;
-    border-radius:8px;
-    border-color: rgb(35, 189, 163);
-    font-weight:bold;
-    transition: .15s; 
-    
-  }
+label.logo{
+  font-family: 'Lobster';
+  color:rgb(35, 189, 163);
+  font-size:45px;
+  line-height: 80px;
+  padding: 0 100px;
+}
 
-  .vaporwave-button:hover{
-    background-color:rgb(61, 59, 59);
-    box-shadow: 3px 4px 4px rgba(35, 189, 163, 0.6)
-    
-  }
-  .vaporwave-button:active{
-    background-color:rgb(90, 88, 88);
-    box-shadow: 3px 4px 4px rgba(228, 91, 255, 0.6)
-  }
+nav ul{
+  float:right;
+  margin-right: 20px;
+}
 
+nav ul li{
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+}
+nav ul li a{
+  font-family: 'Lobster';
+  background-color:rgb(39, 38, 38);
+  color:rgb(30, 206, 176);
+  font-size:32px;
+  padding: 4px 6px;
+  border-radius: 5px;
+  text-transform: uppercase;
+  transition: .15s;
+}
 
-  nav{
-    font-family:arial;
-    background-color: rgb(39, 38, 38) ;
-    height: 80px;
-  }
+a:hover{
+  background-color:rgb(22, 22, 22);
+  color: rgb(228, 91, 255);
+  
+  box-shadow: 6px 8px 8px rgba(228, 91, 255, 0.6)
+}
+a:active{
+  background-color:rgb(14, 14, 14);
+  color: rgb(228, 100, 255);
+  box-shadow: 6px 8px 8px rgba(35, 189, 163, 0.6)
+}
+a.active{
+  box-shadow: 6px 8px 8px rgba(228, 91, 255, .6);
+}
 
-  label.logo{
-    font-family: 'Lobster';
-    color:rgb(35, 189, 163);
-    font-size:45px;
-    line-height: 80px;
-    padding: 0 100px;
-  }
+.title-text{
+  font-size:35px;
+  text-align: center;
+  color: rgb(35, 189, 163);
+  font-family:'Lobster';
+  background-color:rgb(11, 17, 17);
+  margin-top:4px;
+  font-weight: 300;
+  font-style: italic;
+  font-weight: "bold";
+  border-style: outset ;
+  border-top-color: rgb(228, 100, 255);
+  border-bottom-color: rgb(228, 50, 255);  
+}
 
-  nav ul{
-    float:right;
-    margin-right: 20px;
-  }
-
-  nav ul li{
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
-  }
-  nav ul li a{
-    font-family: 'Lobster';
-    background-color:rgb(39, 38, 38);
-    color:rgb(30, 206, 176);
-    font-size:32px;
-    padding: 4px 6px;
-    border-radius: 5px;
-    text-transform: uppercase;
-    transition: .15s;
-  }
-
-  a:hover{
-    background-color:rgb(22, 22, 22);
-    color: rgb(228, 91, 255);
-    
-    box-shadow: 6px 8px 8px rgba(228, 91, 255, 0.6)
-  }
-  a:active{
-    background-color:rgb(14, 14, 14);
-    color: rgb(228, 100, 255);
-    box-shadow: 6px 8px 8px rgba(35, 189, 163, 0.6)
-  }
-  a.active{
-    box-shadow: 6px 8px 8px rgba(228, 91, 255, .6);
-  }
-
-  .title-text{
-    font-size:35px;
-    text-align: center;
-    color: rgb(35, 189, 163);
-    font-family:'Lobster';
-    background-color:rgb(11, 17, 17);
-    margin-top:4px;
-    font-weight: 300;
-    font-style: italic;
-    font-weight: "bold";
-    border-style: outset ;
-    border-top-color: rgb(228, 100, 255);
-    border-bottom-color: rgb(228, 50, 255);  
-  }
-
-  .text-style{
-    color: rgb(36, 189, 163);
-    margin-left: 25%;
-    font-family:"Times New Roman";
-    text-align:center;
-    max-width: 500px;
-    
-  }
-
-    
+.text-style{
+  color: rgb(36, 189, 163);
+  font-family:"Times New Roman";
+  text-align:center;
+  max-width: 700px;
+  margin-left:25%;
+  font-size:25px;
+}
+.contact-text-style{
+  color: rgb(36, 189, 163);
+  font-family:"Times New Roman";
+  max-width: 700px;
+  margin-left:25%;
+  margin-right:25%;
+  margin-top: 15px;
+  font-size:30px;
+}
 
 
 .main-image-div{ 
   position: relative;
   background-color:rgb(36, 189, 163) ;
 }
-
 
 .main-image-text{
     text-decoration: underline;
@@ -139,16 +116,24 @@
   width:100%;
 }
 
-.download-style{
-  text-align:center;
-  color: rgb(228, 100, 255);
+.download-text{
+  text-align: center;
   font-weight: bold;
+  padding:10px;
+  width:100%;
+  font-size: 18px;
+}
+.download-style{
+  color: rgb(228, 100, 255);
+  background-color:rgb(49, 49, 49); 
+  padding:5px;
+  border: 2px outset rgb(35, 189, 163);
+  border-radius: 5px;
 }
 
 .download-style:hover{
   background-color:rgb(22, 22, 22);
   color: rgb(228, 91, 255);
-  
   box-shadow: 6px 8px 8px rgba(35, 189, 163, 0.6)
 }
 
@@ -180,6 +165,7 @@
 
 .about-me-text{
   position: absolute;
+  font-size: 25px;
   color:rgb(35, 189, 163);
   left: 35%;
   width: 55%;
@@ -196,3 +182,23 @@
   max-width:400px;
   height: 400px;
 }
+
+.resume-div{
+  position:relative;
+  align-items: center;
+  margin-left:10%;
+  margin-right:10%;
+  width:80%;
+  background-color:rgb(228, 100, 255) ;
+  border: 7px outset rgb(35, 189, 163);
+
+}
+
+.resume-img{
+  margin-left:4px;
+  margin-top:4px;
+  color:rgb(35, 189, 163);
+  width: 99.2%;
+  
+}
+
