--- a/styles/general.css
+++ b/styles/general.css
@@ -6,9 +6,7 @@
     box-sizing: border-box;
     
   }
-  body{
-    background-image: url("images/35576.jpg");
-  }
+ 
   
   nav{
     font-family:arial;
@@ -58,8 +56,40 @@
     box-shadow: 6px 8px 8px rgba(35, 189, 163, 0.6)
   }
   a.active{
-    box-shadow: 6px 8px 8px rgba(228, 91, 255, .6);
+    background-color:rgb(14, 14, 14);
+    animation: fancyglow 4s linear infinite;
+    transform: scale(1.1);
   }
+
+  @keyframes fancyglow {
+    0%{
+      box-shadow:0px 0px 15px rgba(228, 50, 255,.4);
+      box-shadow:0px 0px 30px rgba(228, 50, 255,.4);
+      box-shadow:0px 0px 45px rgba(228, 50, 255,.4);
+    }
+    25%{
+      box-shadow:0px 0px 15px rgba(35, 189, 163,.7);
+      box-shadow:0px 0px 30px rgba(35, 189, 163,.7);
+      box-shadow:0px 0px 45px rgba(35, 189, 163,.7);
+    }
+    50%{
+      box-shadow:0px 0px 15px rgba(228, 50, 255,.4);
+      box-shadow:0px 0px 30px rgba(228, 50, 255,.4);
+      box-shadow:0px 0px 45px rgba(228, 50, 255,.4);
+    }
+    75%
+    {
+      box-shadow:0px 0px 15px rgba(35, 189, 163,.7);
+      box-shadow:0px 0px 30px rgba(35, 189, 163,.7);
+      box-shadow:0px 0px 45px rgba(35, 189, 163,.7);
+    }
+    100%{
+      box-shadow:0px 0px 15px rgba(228, 50, 255,.4);
+      box-shadow:0px 0px 30px rgba(228, 50, 255,.4);
+      box-shadow:0px 0px 45px rgba(228, 50, 255,.4);
+    }
+  }
+
   
   .title-text{
     font-size:35px;
