--- a/styles/index.css
+++ b/styles/index.css
@@ -13,19 +13,61 @@
 }
 
 .about-me-div{
-  margin-left:5%;
+  margin-left:20%;
   margin-top: 2px;
   position:relative;
-  width:90%;
-  border: 5px outset rgb(228, 50, 255);
+  width:60%;
+  border: 5px outset transparent;
   border-radius:50px;
-  
- 
   background-color:rgb(19, 18, 18);
   height: 500px;
+  transition: .15s;
+
+}
+.about-me-div:hover{
+  
+  transform: scale(.9);
+  animation: fancyglow 4s infinite ease-in-out;
+}
+
+@keyframes fancyglow {
+  0%{
+    transform: translateX(250px);
+    transform: translateY(340px);
+    box-shadow:0px 0px 15px rgba(228, 50, 255,.4);
+    box-shadow:0px 0px 30px rgba(228, 50, 255,.4);
+    box-shadow:0px 0px 45px rgba(228, 50, 255,.4);
+  }
+  25%{
+    transform: translateX(-340px);
+    transform: translateY(340px);
+    box-shadow:0px 0px 15px rgba(35, 189, 163,.7);
+    box-shadow:0px 0px 30px rgba(35, 189, 163,.7);
+    box-shadow:0px 0px 45px rgba(35, 189, 163,.7);
+  }
+  50%{
+    transform: translateX(-110px);
+    box-shadow:0px 0px 15px rgba(228, 50, 255,.4);
+    box-shadow:0px 0px 30px rgba(228, 50, 255,.4);
+    box-shadow:0px 0px 45px rgba(228, 50, 255,.4);
+  }
+  75%
+  {
+    transform: translateX(-300px);
+    box-shadow:0px 0px 15px rgba(35, 189, 163,.7);
+    box-shadow:0px 0px 30px rgba(35, 189, 163,.7);
+    box-shadow:0px 0px 45px rgba(35, 189, 163,.7);
+  }
+  100%{
+    transform: translateX(280px);
+    box-shadow:0px 0px 15px rgba(228, 50, 255,.4);
+    box-shadow:0px 0px 30px rgba(228, 50, 255,.4);
+    box-shadow:0px 0px 45px rgba(228, 50, 255,.4);
+  }
 }
 
 .about-me-text{
+  padding: 60px 60px;
   position: absolute;
   font-size: 25px;
   color:rgb(35, 189, 163);
@@ -54,8 +96,7 @@
 /* attempt at appearing and disappearing qoutes */
 
 .rotating-qoutes{
-  margin-top:40px;
-  margin-bottom:40px;
+  
   padding: 0;
   width:100%;
   height: 700px;
@@ -65,11 +106,13 @@
 }
 
 .qoute-container{
+  margin-top:190px;
+  margin-bottom:190px;
   padding-top: 40px;
   align-items: center;
   text-align: center;
   background-color: rgb(44, 44, 44);
-  animation: disappear 7s linear infinite;
+  animation: disappear 9s linear infinite;
   height: 200px;
 }
 
