--- a/styles/general.css
+++ b/styles/general.css
@@ -6,13 +6,19 @@
     box-sizing: border-box;
     
   }
+  html{
+    scroll-behavior: smooth;
+  }
  
-  
+  body {
+    background-image: url("images/one.jpeg");
+    background-color: rgb(24, 23, 23);
+  }
   nav{
     font-family:arial;
     background-color: rgb(39, 38, 38) ;
     height: 80px;
-  
+    
   }
   
   label.logo{
@@ -57,37 +63,37 @@
   }
   a.active{
     background-color:rgb(14, 14, 14);
-    animation: fancyglow 4s linear infinite;
+    animation: fancyglow 8s linear infinite;
     transform: scale(1.1);
   }
 
   @keyframes fancyglow {
     0%{
-      box-shadow:0px 0px 15px rgba(228, 50, 255,.4);
-      box-shadow:0px 0px 30px rgba(228, 50, 255,.4);
-      box-shadow:0px 0px 45px rgba(228, 50, 255,.4);
+      box-shadow:0px 0px 15px rgba(228, 50, 255,.9);
+      box-shadow:0px 0px 30px rgba(228, 50, 255,.9);
+      box-shadow:0px 0px 45px rgba(228, 50, 255,.9);
     }
     25%{
-      box-shadow:0px 0px 15px rgba(35, 189, 163,.7);
-      box-shadow:0px 0px 30px rgba(35, 189, 163,.7);
-      box-shadow:0px 0px 45px rgba(35, 189, 163,.7);
+      box-shadow:0px 0px 15px rgba(35, 189, 163,.9);
+      box-shadow:0px 0px 30px rgba(35, 189, 163,.9);
+      box-shadow:0px 0px 45px rgba(35, 189, 163,.9);
     }
     50%{
-      box-shadow:0px 0px 15px rgba(228, 50, 255,.4);
-      box-shadow:0px 0px 30px rgba(228, 50, 255,.4);
-      box-shadow:0px 0px 45px rgba(228, 50, 255,.4);
+      box-shadow:0px 0px 15px rgba(228, 50, 255,.9);
+      box-shadow:0px 0px 30px rgba(228, 50, 255,.9);
+      box-shadow:0px 0px 45px rgba(228, 50, 255,.9);
     }
     75%
     {
-      box-shadow:0px 0px 15px rgba(35, 189, 163,.7);
-      box-shadow:0px 0px 30px rgba(35, 189, 163,.7);
-      box-shadow:0px 0px 45px rgba(35, 189, 163,.7);
+      box-shadow:0px 0px 15px rgba(35, 189, 163,.9);
+      box-shadow:0px 0px 30px rgba(35, 189, 163,.9);
+      box-shadow:0px 0px 45px rgba(35, 189, 163,.9);
     }
     100%{
-      box-shadow:0px 0px 15px rgba(228, 50, 255,.4);
-      box-shadow:0px 0px 30px rgba(228, 50, 255,.4);
-      box-shadow:0px 0px 45px rgba(228, 50, 255,.4);
-    }
+      box-shadow:0px 0px 15px rgba(228, 50, 255,.9);
+      box-shadow:0px 0px 30px rgba(228, 50, 255,.9);
+      box-shadow:0px 0px 45px rgba(228, 50, 255,.9);
+      }
   }
 
   
@@ -122,7 +128,26 @@
 
   .main-image-div{ 
     position: relative;
-    background-color:rgb(36, 189, 163) ;
+    background-color:rgb(9, 10, 10) ;
+    border-radius:12px;
+    border: 10px outset rgb(36, 189, 163);
+    border-bottom-color:  rgb(228, 50, 255); 
+    animation: colorshift 8s linear infinite;
+  }
+  @keyframes colorshift {
+    33%{
+      border-left-color:  rgb(228, 50, 255); 
+      border-bottom-color: rgb(36, 189, 163);
+    }
+    66%{
+      border-top-color:  rgb(228, 50, 255); 
+      border-bottom-color: rgb(36, 189, 163);
+    }
+    99%{
+      border-right-color:  rgb(228, 50, 255);
+      border-left-color: rgb(36, 189, 163); 
+    }
+    
   }
   
   .main-image-text{
@@ -138,7 +163,7 @@
   }
   
   .main-image-style{
-    opacity:0.91;
+    opacity:0.7;
     height:200px;
     width:100%;
   }
