--- a/styles/index.css
+++ b/styles/index.css
@@ -2,94 +2,7 @@
     
 /* declines all defaulted padding, and margins needs an override though*/ 
 
-.about-me-image{
-  position:relative;
-
-  border:6px outset rgb(35, 189, 163);
-  border-radius: 50px;
-  width:100%;
-  max-width:400px;
-  height: 387px;
-}
-
-.about-me-div{
-  margin-left:20%;
-  margin-top: 2px;
-  position:relative;
-  width:60%;
-  border: 5px outset transparent;
-  border-radius:50px;
-  background-color:rgb(19, 18, 18);
-  height: 500px;
-  transition: .15s;
-
-}
-.about-me-div:hover{
-  
-  transform: scale(.9);
-  animation: fancyglow 4s infinite ease-in-out;
-}
-
-@keyframes fancyglow {
-  0%{
-    transform: translateX(250px);
-    transform: translateY(340px);
-    box-shadow:0px 0px 15px rgba(228, 50, 255,.4);
-    box-shadow:0px 0px 30px rgba(228, 50, 255,.4);
-    box-shadow:0px 0px 45px rgba(228, 50, 255,.4);
-  }
-  25%{
-    transform: translateX(-340px);
-    transform: translateY(340px);
-    box-shadow:0px 0px 15px rgba(35, 189, 163,.7);
-    box-shadow:0px 0px 30px rgba(35, 189, 163,.7);
-    box-shadow:0px 0px 45px rgba(35, 189, 163,.7);
-  }
-  50%{
-    transform: translateX(-110px);
-    box-shadow:0px 0px 15px rgba(228, 50, 255,.4);
-    box-shadow:0px 0px 30px rgba(228, 50, 255,.4);
-    box-shadow:0px 0px 45px rgba(228, 50, 255,.4);
-  }
-  75%
-  {
-    transform: translateX(-300px);
-    box-shadow:0px 0px 15px rgba(35, 189, 163,.7);
-    box-shadow:0px 0px 30px rgba(35, 189, 163,.7);
-    box-shadow:0px 0px 45px rgba(35, 189, 163,.7);
-  }
-  100%{
-    transform: translateX(280px);
-    box-shadow:0px 0px 15px rgba(228, 50, 255,.4);
-    box-shadow:0px 0px 30px rgba(228, 50, 255,.4);
-    box-shadow:0px 0px 45px rgba(228, 50, 255,.4);
-  }
-}
-
-.about-me-text{
-  padding: 60px 60px;
-  position: absolute;
-  font-size: 25px;
-  color:rgb(35, 189, 163);
-  left: 35%;
-  width: 55%;
-  top:12%;
-  color:rgb(35, 189, 163);
-  height: 450px;
-}
-
-.image-box{
-  background-color: rgb(35, 189, 163);
-  margin-left:3%;
-  position:relative;
-  border: 7px rgb(35, 189, 163);
-  border-style:ridge;
-  border-radius: 70px;
-  width:35%;
-  max-width:400px;
-  height: 400px;
-}
-
+/* */
 
 
 
@@ -98,20 +11,27 @@
 .rotating-qoutes{
   
   padding: 0;
-  width:100%;
-  height: 700px;
-  background-color: rgb(44, 44, 44);
+  margin:10%;
+  width:80%;
+  height: 400px;
+  background-color: rgb(0, 0, 0, 0);
   justify-content: center;
+  animation-delay: .6s;
+  animation: fancyglow 8s linear infinite;
+  border-radius: 50px;
   align-items: center;
+  
 }
 
+
+
 .qoute-container{
+
   margin-top:190px;
-  margin-bottom:190px;
+  margin-bottom:250px;
   padding-top: 40px;
   align-items: center;
   text-align: center;
-  background-color: rgb(44, 44, 44);
   animation: disappear 9s linear infinite;
   height: 200px;
 }
@@ -135,6 +55,7 @@
 }
 
 .speaker{
+  padding: 30px 10px;
   font-family: 'Lobster';
   font-weight: bold;
   font-size:35px;
@@ -142,9 +63,84 @@
 }
 
 .qoute{
-  
+  padding: 50px 10px;
   font-family: 'Times New Roman';
   font-style: italic;
   font-size:50px;
   color:rgb(35, 189, 163);
+}
+
+
+
+
+
+
+
+
+/* main homepage buttons below*/
+
+.homepage-layout{
+  
+  color:rgb(35, 189, 163);
+  display:flex;
+  align-items:center;
+  justify-content: space-between;
+  padding-bottom: 100px;
+}
+
+.homepage-layout .home-boxes{
+  margin: 40px;
+  width:300px;
+  height:200px;
+  font-family: 'Lobster';
+  font-size: 50px;
+  background-color: black;
+  text-align: center;
+  padding:70px 10px;
+  border-radius: 30px;
+  transition: 2s;
+  animation: fancyglow 8s linear infinite;
+  animation-delay: calc(var(--i)*.75s);
+
+}
+
+.homepage-layout .home-boxes:hover{
+  transform: scale(1.3)
+}
+
+@keyframes fancyglow {
+  0%{
+    box-shadow:0px 0px 15px rgba(228, 50, 255,.9);
+    box-shadow:0px 0px 30px rgba(228, 50, 255,.9);
+    box-shadow:0px 0px 45px rgba(228, 50, 255,.9);
+  }
+  25%{
+    box-shadow:0px 0px 15px rgba(35, 189, 163,.9);
+    box-shadow:0px 0px 30px rgba(35, 189, 163,.9);
+    box-shadow:0px 0px 45px rgba(35, 189, 163,.9);
+  }
+  50%{
+    box-shadow:0px 0px 15px rgba(228, 50, 255,.9);
+    box-shadow:0px 0px 30px rgba(228, 50, 255,.9);
+    box-shadow:0px 0px 45px rgba(228, 50, 255,.9);
+  }
+  75%
+  {
+    box-shadow:0px 0px 15px rgba(35, 189, 163,.9);
+    box-shadow:0px 0px 30px rgba(35, 189, 163,.9);
+    box-shadow:0px 0px 45px rgba(35, 189, 163,.9);
+  }
+  100%{
+    box-shadow:0px 0px 15px rgba(228, 50, 255,.9);
+    box-shadow:0px 0px 30px rgba(228, 50, 255,.9);
+    box-shadow:0px 0px 45px rgba(228, 50, 255,.9);
+  }
+}
+
+/* main containers of homepage*/
+
+.main-container{
+  margin:10%;
+  width:80%;
+  background-color: black;
 }
