Updates to homescreen
General homescreen is structured

--- a/styles/general.css
+++ b/styles/general.css
@@ -168,3 +168,12 @@
     width:100%;
   }
   
+
+
+
+
+  /* back to top buttons */
+  .back-to-top{
+    padding:5px;
+    background-color:rgb(39, 38, 38);
+  }
