--- a/styles/index.css
+++ b/styles/index.css
@@ -5,6 +5,11 @@
 /* */
 
 
+h2{
+  font-size: 30px;
+  border-radius: 5px;
+  color:rgb(228, 91, 255);
+}
 
 /* attempt at appearing and disappearing qoutes */
 
@@ -91,6 +96,7 @@
 .homepage-layout .home-boxes{
   margin: 40px;
   width:300px;
+  color:rgb(35, 189, 163);
   height:200px;
   font-family: 'Lobster';
   font-size: 50px;
@@ -105,7 +111,8 @@
 }
 
 .homepage-layout .home-boxes:hover{
-  transform: scale(1.3)
+  transform: scale(1.3);
+
 }
 
 @keyframes fancyglow {
@@ -140,7 +147,40 @@
 /* main containers of homepage*/
 
 .main-container{
-  margin:10%;
-  width:80%;
+  position:relative;
+  display:flex;
+  margin:0;
+  padding:0;
+  margin-top:200px;
+  width:100%;
+  height: 900px;
   background-color: black;
+  border-radius: 20px;
+  animation: fancyglow 4s  2s linear infinite;
+}
+
+.about-me-image{
+  top:1%;
+  left:1%;
+  position: absolute;
+  width:450px;
+  height:400px;
+  border-radius: 35px;
+  animation: fade-out 10s linear infinite;
+}
+
+@keyframes fade-out {
+  0%{
+    opacity: 0;
+  }
+  25%{
+    opacity: .3;
+  }
+  50%
+  {
+    opacity: 1;
+  }
+  100%{
+    opacity: 0;
+  }
 }
