--- a/styles/index.css
+++ b/styles/index.css
@@ -19,7 +19,7 @@ h2{
   margin:10%;
   width:80%;
   height: 400px;
-  background-color: rgb(0, 0, 0, 0);
+  background-color: rgb(0, 0, 0);
   justify-content: center;
   animation-delay: .6s;
   animation: fancyglow 8s linear infinite;
@@ -183,4 +183,12 @@ h2{
   100%{
     opacity: 0;
   }
+}
+
+.homepage-header{
+  font-family: 'Lobster';
+  position: absolute;
+  left:65%;
+  top:2%;
+  font-size: 50px;
 }
