--- a/styles/general.css
+++ b/styles/general.css
@@ -13,11 +13,12 @@
   body {
     background-color: rgb(24, 23, 23);
     background-image: url("../images/final-synth.jpg");
+ 
     
   }
   nav{
     font-family:arial;
-    background-color: rgb(39, 38, 38) ;
+    background-color: rgb(0, 0, 0) ;
     height: 80px;
     
   }
@@ -176,4 +177,8 @@
   .back-to-top{
     padding:5px;
     background-color:rgb(39, 38, 38);
+  }
+
+  .fun-fact-style{
+    
   }
