--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,10 +1,46 @@
+
+
+
+
+
+
+.main-div{
+  position:relative;
+  height: 2000px;
+  background-color: rgba(0,0,0,.6);
+  margin:50px;
+  border-radius: 50px;
+
+  
+}
+
+
+
+
+
+
+
+
 .contact-text-style{
+    width:80%;
+    position:absolute;
     color: rgb(36, 189, 163);
     font-family:"Times New Roman";
-    max-width: 700px;
-    margin-left:25%;
-    margin-right:25%;
     margin-top: 15px;
+    left:10%;
+    right:10%;
+    top:10%;
     font-size:30px;
+    
   }
   
+
+.link-style{
+  color:rgb(36, 189, 163);
+  text-decoration: underline;
+  text-decoration-color: rgb(228, 50, 255);
+}
+
+.message{
+  font-size: 40px;
+}
