--- a/styles/general.css
+++ b/styles/general.css
@@ -71,30 +71,30 @@
 
   @keyframes fancyglow {
     0%{
-      box-shadow:0px 0px 15px rgba(228, 50, 255,.9);
-      box-shadow:0px 0px 30px rgba(228, 50, 255,.9);
-      box-shadow:0px 0px 45px rgba(228, 50, 255,.9);
+      box-shadow:0px 0px 15px  20px rgba(228, 50, 255,.9);
+      box-shadow:0px 0px 30px 20px rgba(228, 50, 255,.9);
+      box-shadow:0px 0px 80px 20px rgba(228, 50, 255,.9);
     }
     25%{
-      box-shadow:0px 0px 15px rgba(35, 189, 163,.9);
-      box-shadow:0px 0px 30px rgba(35, 189, 163,.9);
-      box-shadow:0px 0px 45px rgba(35, 189, 163,.9);
+      box-shadow:0px 0px 15px 10px rgba(35, 189, 163,.9);
+      box-shadow:0px 0px 30px 10px rgba(35, 189, 163,.9);
+      box-shadow:0px 0px 80px 10px rgba(35, 189, 163,.9);
     }
     50%{
-      box-shadow:0px 0px 15px rgba(228, 50, 255,.9);
-      box-shadow:0px 0px 30px rgba(228, 50, 255,.9);
-      box-shadow:0px 0px 45px rgba(228, 50, 255,.9);
+      box-shadow:0px 0px 15px 10px rgba(228, 50, 255,.9);
+      box-shadow:0px 0px 30px 10px rgba(228, 50, 255,.9);
+      box-shadow:0px 0px 80px 10px rgba(228, 50, 255,.9);
     }
     75%
     {
-      box-shadow:0px 0px 15px rgba(35, 189, 163,.9);
-      box-shadow:0px 0px 30px rgba(35, 189, 163,.9);
-      box-shadow:0px 0px 45px rgba(35, 189, 163,.9);
+      box-shadow:0px 0px 15px 10px rgba(35, 189, 163,.9);
+      box-shadow:0px 0px 30px 10px rgba(35, 189, 163,.9);
+      box-shadow:0px 0px 80px 10px rgba(35, 189, 163,.9);
     }
     100%{
-      box-shadow:0px 0px 15px rgba(228, 50, 255,.9);
-      box-shadow:0px 0px 30px rgba(228, 50, 255,.9);
-      box-shadow:0px 0px 45px rgba(228, 50, 255,.9);
+      box-shadow:0px 0px 15px 10px rgba(228, 50, 255,.9);
+      box-shadow:0px 0px 30px 10px rgba(228, 50, 255,.9);
+      box-shadow:0px 0px 80px 10px rgba(228, 50, 255,.9);
       }
   }
 
@@ -182,3 +182,5 @@
   .fun-fact-style{
     
   }
+
+  
