--- a/styles/resume.css
+++ b/styles/resume.css
@@ -92,7 +92,7 @@
 /* new resume below*/
 
   .custom-resume{
-    overflow: hidden ;
+    overflow: auto ;
     border-radius:40px;
     font-family: 'Times New Roman';
     display: grid;
@@ -111,8 +111,9 @@
   .resume-header{
     font-weight:bold;
     position: absolute;
+    right:5%;
     font-size: 55px;
-    left:46%;
+    left:40%;
 
   }
 
@@ -121,13 +122,18 @@
     position: absolute;
     font-size: 30px;
     margin-top:3%;
+    right:5%;
     width:60%;
-    left:30%;
+    left:15%;
+    text-align: center;
     top:8%;
   }
 
   .resume-container{
+    margin:5%;
     position: relative;
+    right:5%;
+    bottom:5%;
     color:rgb(82, 255, 226);
     width:100%;
   
@@ -137,12 +143,15 @@
     text-decoration-color: rgb(228, 91, 255);
     position:absolute;
     left:10%;
+    margin:15px;
+    
     font-size: 40px;
     text-align:left;
     
   }
   .list-text{
     position: absolute;
+    margin-top:5%;
     left: 14%;
     top:49%;
     font-size: 28px;
@@ -181,12 +190,14 @@
     font-weight: bold;
     font-size: 30px;
     position: absolute;
+    margin-top:2%;
     top:17%;
     left:10%;
     
   }
 
   .school-italics{
+    margin-top:4%;
     font-weight: bold;
     font-size: 30px;
     position: absolute;
@@ -195,6 +206,7 @@
   }
 
   .education-list-text{
+    margin-top:6%;
     position: absolute;
     left: 14%;
     top:43%;
@@ -228,13 +240,15 @@
 
   .rotating-icons-container{
     
-    position: relative;
+    position: absolute;
     left: 15%;
     right:15%;
-    top:15%;
+    top:1%;
     width:70%;
     height: 100px;
     border-radius: 80px;
+    margin:1%;
+    margin-bottom:3%;
     
     
     
