--- a/styles/index.css
+++ b/styles/index.css
@@ -115,34 +115,7 @@ h2{
   transform: scale(1.3);
 }
 
-@keyframes fancyglow {
-  0%{
-    box-shadow:0px 0px 15px rgba(228, 50, 255,.9);
-    box-shadow:0px 0px 30px rgba(228, 50, 255,.9);
-    box-shadow:0px 0px 45px rgba(228, 50, 255,.9);
-  }
-  25%{
-    box-shadow:0px 0px 15px rgba(35, 189, 163,.9);
-    box-shadow:0px 0px 30px rgba(35, 189, 163,.9);
-    box-shadow:0px 0px 45px rgba(35, 189, 163,.9);
-  } 
-  50%{
-    box-shadow:0px 0px 15px rgba(228, 50, 255,.9);
-    box-shadow:0px 0px 30px rgba(228, 50, 255,.9);
-    box-shadow:0px 0px 45px rgba(228, 50, 255,.9);
-  }
-  75%
-  {
-    box-shadow:0px 0px 15px rgba(35, 189, 163,.9);
-    box-shadow:0px 0px 30px rgba(35, 189, 163,.9);
-    box-shadow:0px 0px 45px rgba(35, 189, 163,.9);
-  }
-  100%{
-    box-shadow:0px 0px 15px rgba(228, 50, 255,.9);
-    box-shadow:0px 0px 30px rgba(228, 50, 255,.9);
-    box-shadow:0px 0px 45px rgba(228, 50, 255,.9);
-  }
-}
+
 
 /* main containers of homepage*/
 
@@ -231,11 +204,18 @@ h2{
 /* headers like "about me", etc */
 .homepage-header{
   font-family: 'Lobster';
+  color:rgb(245, 233, 244);
   position: absolute;
   left:65%;
   top:2%;
   font-size: 50px;
+  animation: coolTextGLow 8s linear infinite;
 }
+
+
+
+
+
 .homepage-texts{
   position: absolute;
   left:40%;
@@ -270,4 +250,71 @@ h2{
   font-size: 40px;
   color:rgb(35, 189, 163);
   justify-self: center;
+}
+
+@keyframes coolTextGlow{
+  0%{
+     
+    text-shadow:0px 0px 15px rgba(228, 50, 255,1);
+    text-shadow:0px 0px 30px rgba(228, 50, 255,1);
+    text-shadow:0px 0px 45px rgba(228, 50, 255,.9);
+    text-shadow:0px 0px 60px rgba(228, 50, 255,.9);
+    text-shadow:0px 0px 75px rgba(228, 50, 255,.9);
+
+  }
+  25%{
+    text-shadow:0px 0px 15px rgba(35, 189, 163,.9);
+    text-shadow:0px 0px 30px rgba(35, 189, 163,.9);
+    text-shadow:0px 0px 45px rgba(35, 189, 163,.9);
+  } 
+  50%{
+    text-shadow:0px 0px 15px rgba(228, 50, 255,1);
+    text-shadow:0px 0px 30px rgba(228, 50, 255,1);
+    text-shadow:0px 0px 45px rgba(228, 50, 255,.9);
+    text-shadow:0px 0px 60px rgba(228, 50, 255,.9);
+    text-shadow:0px 0px 75px rgba(228, 50, 255,.9);
+  }
+  75%
+  {
+    text-shadow:0px 0px 15px rgba(35, 189, 163,.9);
+    text-shadow:0px 0px 30px rgba(35, 189, 163,.9);
+    text-shadow:0px 0px 45px rgba(35, 189, 163,.9);
+  }
+  100%{
+    text-shadow:0px 0px 15px rgba(228, 50, 255,1);
+    text-shadow:0px 0px 30px rgba(228, 50, 255,1);
+    text-shadow:0px 0px 45px rgba(228, 50, 255,.9);
+    text-shadow:0px 0px 60px rgba(228, 50, 255,.9);
+    text-shadow:0px 0px 75px rgba(228, 50, 255,.9);
+  }
+}
+
+
+@keyframes fancyglow {
+  0%{
+    box-shadow:0px 0px 15px rgba(228, 50, 255,.9);
+    box-shadow:0px 0px 30px rgba(228, 50, 255,.9);
+    box-shadow:0px 0px 45px rgba(228, 50, 255,.9);
+  }
+  25%{
+    box-shadow:0px 0px 15px rgba(35, 189, 163,.9);
+    box-shadow:0px 0px 30px rgba(35, 189, 163,.9);
+    box-shadow:0px 0px 45px rgba(35, 189, 163,.9);
+  } 
+  50%{
+    box-shadow:0px 0px 15px rgba(228, 50, 255,.9);
+    box-shadow:0px 0px 30px rgba(228, 50, 255,.9);
+    box-shadow:0px 0px 45px rgba(228, 50, 255,.9);
+  }
+  75%
+  {
+    box-shadow:0px 0px 15px rgba(35, 189, 163,.9);
+    box-shadow:0px 0px 30px rgba(35, 189, 163,.9);
+    box-shadow:0px 0px 45px rgba(35, 189, 163,.9);
+  }
+  100%{
+    box-shadow:0px 0px 15px rgba(228, 50, 255,.9);
+    box-shadow:0px 0px 30px rgba(228, 50, 255,.9);
+    box-shadow:0px 0px 45px rgba(228, 50, 255,.9);
+  }
 }
