--- a/styles/general.css
+++ b/styles/general.css
@@ -39,7 +39,7 @@
   
   nav ul li{
     display: inline-block;
-    line-height: 80px;
+    line-height: 5rem;
     margin: 0 5px;
   }
   nav ul li a{
@@ -47,7 +47,7 @@
     background-color:rgb(0, 0, 0);
     color:rgb(30, 206, 176);
     font-size:32px;
-    padding: 4px 6px;
+    padding: .25rem .4rem;
     border-radius: 5px;
     text-transform: uppercase;
     transition: .15s;
@@ -126,7 +126,7 @@
     color: rgb(36, 189, 163);
     font-family:"Times New Roman";
     text-align:center;
-    max-width: 700px;
+    max-width: 40ch;
     margin-left:25%;
     font-size:25px;
   }
