--- a/styles/index.css
+++ b/styles/index.css
@@ -5,20 +5,15 @@
 /* */
 
 
-h2{
-  font-size: 30px;
-  border-radius: 5px;
-  color:rgb(228, 91, 255);
-}
-
 /* attempt at appearing and disappearing qoutes */
 
 .rotating-qoutes{
-  
+  position:relative;
   padding: 0;
   margin:10%;
   width:80%;
-  height: 400px;
+  
+  height:20rem;
   background-color: rgb(0, 0, 0);
   justify-content: center;
   animation-delay: .6s;
@@ -31,10 +26,10 @@ h2{
 
 
 .qoute-container{
-
-  margin-top:190px;
-  margin-bottom:250px;
-  padding-top: 40px;
+  
+  margin-top:4rem;
+  margin-bottom:8rem;
+  padding-top: 2.25rem;
   align-items: center;
   text-align: center;
   animation: disappear 9s linear infinite;
@@ -60,18 +55,26 @@ h2{
 }
 
 .speaker{
-  padding: 30px 10px;
+  position:absolute;
+  left:50%;
+  top:80%;
   font-family: 'Lobster';
   font-weight: bold;
-  font-size:35px;
+  font-size:2rem;
   color:rgb(228, 91, 255);
 }
 
 .qoute{
-  padding: 50px 10px;
+  position:absolute;
+ 
+  margin-left:auto;
+  margin-right:auto;
+  left:0;
+  right:0;
+  top:30%;
   font-family: 'Times New Roman';
   font-style: italic;
-  font-size:50px;
+  font-size:3rem;
   color:rgb(35, 189, 163);
 }
 
@@ -85,26 +88,26 @@ h2{
 /* main homepage buttons below*/
 
 .homepage-layout{
-  
+  margin:15rem;
   color:rgb(35, 189, 163);
   display:flex;
   align-items:center;
   justify-content: space-between;
-  padding-bottom: 100px;
+  padding: 3rem;
 }
 
 /* the three main homepage boxes*/
 .homepage-layout .home-boxes{
-  margin: 40px;
-  width:350px;
+  margin: 2.5rem;
+  width:20rem;
   color:rgb(35, 189, 163);
   height:200px;
   font-family: 'Lobster';
-  font-size: 50px;
+  font-size: 3rem;
   background-color: black;
   text-align: center;
   padding:70px 10px;
-  border-radius: 30px;
+  border-radius: 2rem;
   transition: 2s;
   animation: fancyglow 8s linear infinite;
   animation-delay: calc(var(--i)*.75s);
@@ -127,7 +130,8 @@ h2{
   justify-content: center;
   padding:0;
   margin-top:200px;
-  width:100%;
+  width:80%;
+  margin-left:10%;
   height: 900px;
   background-color: black;
   border-radius: 20px;
@@ -222,7 +226,8 @@ h2{
   left:40%;
   color:rgb(35, 189, 163);
   top:12%;
-  font-size: 30px;
+  font-size: 2rem;
+  
   right:3%;
   bottom:1%;
 
