--- a/styles/general.css
+++ b/styles/general.css
@@ -11,12 +11,14 @@
   }
  
   body {
+
     background-color: rgb(24, 23, 23);
     background-image: url("../images/final-synth.jpg");
     
   }
   nav{
     font-family:arial;
+    display:flex;
     background-color: rgb(0, 0, 0) ;
     height: 80px;
     width:100%;
@@ -32,18 +34,21 @@
     animation: coolTextGlow 10s linear infinite;
   }
   
-  nav ul{
-    float:right;
-    margin-right: 20px;
+  nav ul{ 
+    margin:0;
+    padding:0;
+    display:flex;
   }
   
   nav ul li{
+    list-style:none;
     display: inline-block;
     line-height: 5rem;
     margin: 0 5px;
   }
   nav ul li a{
     font-family: 'Lobster';
+    display:block;
     background-color:rgb(0, 0, 0);
     color:rgb(30, 206, 176);
     font-size:32px;
@@ -99,9 +104,45 @@
       box-shadow:0px 0px 80px 10px rgba(228, 50, 255,.9);
     
       }
+
+    
   }
 
+  .toggle-button{
+    position:absolute;
+    top: .75rem;
+    right:1rem;
+    display:none;
+    flex-direction:column;
+    justify-content:space-between;
+    width:30px;
+    height:21px;
+  }
 
+  .toggle-button .bar{
+    height:3px;
+    width:100%;
+    background-color: rgb(35, 189, 163);
+  }
+  @media (max-width: 400px){
+    .toggle-button{
+      display:flex;
+    }
+
+    nav ul li{
+      display:none;
+    }
+    nav{
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    nav ul{
+      flex-direction:column;
+      
+    }
+
+  }
   
   .title-text{
     font-size:35px;
