--- a/styles/general.css
+++ b/styles/general.css
@@ -19,8 +19,10 @@
   nav{
     font-family:arial;
     display:flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: rgb(0, 0, 0) ;
-    height: 80px;
+    height: 4rem;
     width:100%;
     
   }
@@ -28,9 +30,8 @@
   label.logo{
     font-family: 'Lobster';
     color:rgb(35, 189, 163);
-    font-size:45px;
-    line-height: 80px;
-    padding: 0 100px;
+    font-size:2rem;
+    align-self: center;
     animation: coolTextGlow 10s linear infinite;
   }
   
@@ -42,9 +43,6 @@
   
   nav ul li{
     list-style:none;
-    display: inline-block;
-    line-height: 5rem;
-    margin: 0 5px;
   }
   nav ul li a{
     font-family: 'Lobster';
@@ -124,25 +122,7 @@
     width:100%;
     background-color: rgb(35, 189, 163);
   }
-  @media (max-width: 400px){
-    .toggle-button{
-      display:flex;
-    }
-
-    nav ul li{
-      display:none;
-    }
-    nav{
-      flex-direction: column;
-      align-items: flex-start;
-    }
-
-    nav ul{
-      flex-direction:column;
-      
-    }
-
-  }
+  
   
   .title-text{
     font-size:35px;
@@ -188,11 +168,11 @@
   .main-image-div h1{
     position: absolute;
     top: 20%;
-    left: 45%;
-    font-size: 80px;
+    left: 50%;
+    transform: translate(-50%);
+    font-size: 4.5rem;
     color:rgb(36, 189, 163);
     font-family: 'Lobster';
-    animation: flipper 6s ease-in-out infinite;
   }
 
 
@@ -219,7 +199,7 @@
   
   .main-image-style{
     opacity:0.7;
-    height:200px;
+    height:10vh;
     width:100%;
   }
   
@@ -270,8 +250,36 @@
                   0px 0px 75px rgb(228, 50, 255);
     }
   }
-  @keyframes flipper {
-    0%,80% {
-      transform: rotateY(360deg) 
+ 
+
+
+  @media (max-width: 1000px){
+    .toggle-button{
+      display:flex;
     }
+
+    nav ul li{
+      display:none;
+    }
+    nav{
+      flex-direction: column;
+      align-items: flex-start;
+      width:100%;
+    }
+
+    nav ul{
+      flex-direction:column;
+      
+    }
+   
+    .main-image-div h1{
+      position: absolute;
+      top: 20%;
+      left: 50%;
+      transform: translate(-50%);
+      font-size: 2rem;
+      color:rgb(36, 189, 163);
+      font-family: 'Lobster';
+    }
+
   }
