--- a/styles/general.css
+++ b/styles/general.css
@@ -267,7 +267,7 @@
     .navbar{
       flex-direction:column;
       align-items:flex-start;
-      margin-bottom:1rem;
+      margin-bottom:8rem;
     }
 
     .navbar-links ul{
@@ -280,7 +280,7 @@
       
     }
     .navbar-links li a{
-      font-size:.5rem;
+      font-size:1.25rem;
       
     }
 
@@ -293,5 +293,6 @@
       display:none;
     }
 
+    
 
   }
